2007-09-04  Akim Demaille  <demaille@gostai.com>

	We need ReturnExp
	* src/ast/ast.yml (ReturnExp): Decomment it.
	Implement its printer.

2007-09-04  Akim Demaille  <demaille@gostai.com>

	object::State
	* src/object/state.hh, src/object/state.cc: New.
	* src/object/Makefile.am: Adjust.
	* src/object/atom.hh, src/object/atom.hxx: Context now
	holds a State, not a UConnection&.
	* src/object/code-class.cc: Adjust.
	* src/object/context-class.hh: Adjust.
	* src/object/fwd.hh: Declare State.
	* src/runner/runner.cc: Adjust.
	* src/uconnection.cc: Adjust.

2007-08-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Adjust a comment.
	* src/runner/coroutine.hh: It's `throw (foo);' that doesn't work
	with GCC <= 3.3.

2007-08-28  Akim Demaille  <akim@lrde.epita.fr>

	Minor changes
	* src/runner/coroutine.hh (line): protected so that we can use
	it in the macros.

2007-08-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Minor code enhancements.
	* src/runner/coroutine.hh (context_number): Rename as context_count.
	* src/runner/runner.hh (emit_result): Accept NULL ref-counted
	pointers and ignore them.
	* src/runner/coroutine.hxx,
	* src/runner/runner.cc: Adjust all callers of context_number and
	emit_result.
	* src/runner/scheduler.cc (kill_job): Simplify with libport.

2007-08-28  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Code cleanup.
	* src/runner/coroutine.hh (CORO_SAVE_BEGIN_): Drop the unused
	argument.

2007-08-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Compilation fix.
	* src/runner/runner.cc: Declare variables in a local scope so that
	they are not crossed by case labels.

2007-08-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Do not generate case statements for calls in background.
	* src/runner/coroutine.hh (CORO_CALL_): Add an argument.  Do not
	always invoke CORO_SAVE_END_ as it generates useless `case'
	statements for calls in background.
	(CORO_CALL, CORO_CALL_IN_BACKGROUND): Adjust.

2007-08-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Enhance usability of coroutines.