@@ -1,0 +1,34 @@
+#!/usr/bin/env python
+
+import sys
+import ast, tools
+import ast_params
+
+if len (sys.argv) != 2:
+  tools.error("Usage: .. SRCDIR")
+srcdir = sys.argv[1]
+
+## Abstract syntax tree C++ forward declarations ------------------------------
+loader = ast.Loader ()
+nodes = loader.load (sys.stdin)
+
+all_hh = file ("all.hh.tmp", "w")
+print >>all_hh, tools.banner("ast/all.hh",
+			     """Include all the exported headers.""") + """
+#ifndef AST_ALL_HH
+# define AST_ALL_HH
+
+# include "ast/fwd.hh"
+"""
+
+arr = nodes.values ()
+arr.sort (lambda x, y: cmp (x.name, y.name))
+for node in arr:
+  print >>all_hh, '# include "ast/' + node.hh() + '"'
+
+print >>all_hh, """
+
+#endif // !AST_ALL_HH"""
+
+all_hh.close ()
+tools.lazy_install (srcdir, "all.hh");
