@@ -1,53 +1,35 @@
+//<<-
+// Generated, do not edit by hand.
+//->>
 /**
  ** \file ast/all.hh
- ** \brief Include all exported headers.
+ ** \brief Include all the exported headers.
  */
 
 #ifndef AST_ALL_HH
 # define AST_ALL_HH
 
 # include "ast/fwd.hh"
-# include "ast/ast.hh"
 
-# include "ast/exp.hh"
-
-# include "ast/alias-exp.hh"
 # include "ast/and-exp.hh"
-# include "ast/array-exp.hh"
-# include "ast/arrow-exp.hh"
 # include "ast/assign-exp.hh"
-# include "ast/at-exp.hh"
+# include "ast/ast.hh"
 # include "ast/binary-exp.hh"
 # include "ast/call-exp.hh"
 # include "ast/comma-exp.hh"
-# include "ast/delete-exp.hh"
-# include "ast/disinherits-exp.hh"
-# include "ast/dot-exp.hh"
-# include "ast/emit-exp.hh"
-# include "ast/exec-exp.hh"
-# include "ast/external-exp.hh"
+# include "ast/exp.hh"
 # include "ast/float-exp.hh"
 # include "ast/function.hh"
-# include "ast/id-exp.hh"
-# include "ast/if-exp.hh"
-# include "ast/inherits-exp.hh"
 # include "ast/list-exp.hh"
 # include "ast/neg-op-exp.hh"
 # include "ast/new-exp.hh"
 # include "ast/noop.hh"
-# include "ast/op-var-exp.hh"
 # include "ast/pipe-exp.hh"
-# include "ast/ref-exp.hh"
 # include "ast/return-exp.hh"
-# include "ast/scope-exp.hh"
+# include "ast/scope.hh"
 # include "ast/semicolon-exp.hh"
 # include "ast/string-exp.hh"
 # include "ast/tag-exp.hh"
-# include "ast/tag-op-exp.hh"
-# include "ast/wait-exp.hh"
-# include "ast/wait-until-exp.hh"
-# include "ast/whenever-exp.hh"
 
-# include "ast/pretty-printer.hh"
 
 #endif // !AST_ALL_HH
